Revision history for Perl extension App::Sqitch

1.3.2
     - Fixed Snowflake warehouse and role setup to properly quote identifiers.
       Thanks to @marc-marketparts for the report (#685)!

1.3.1  2022-10-01T18:49:30Z
     - Fixed a bug introduced in v1.3.0 where the Postgres engine would
       always pass the port to `psql`, thus ignoring the `PGPORT` environment
       variable. Thanks to Cam Feenstra for the spot (#675)!
     - Fixed test failures on OSes where the local time zone cannot be
       determined. Thanks to Slaven Rezić for the test reports, and to
       Dave Rolsky for the solution (#672).
     - Updated the MySQL deploy/revert lock to be specific to the target
       database. This allows multiple instances of Sqitch to run at the
       same time on the same server as long as they're connecting to different
       databases. Thanks to Dmytro Kh for the report and discussion of the
       options (#670).
     - Fixed test failures where DBD::Mem was not installed. Likely only
       occurred on some CPAN Testers nodes. Thanks to Slaven Rezić for those
       (#673).
     - Banned the backslash character (`\`) in change and tag names. It would
       be ignored on Unix-style systems, but create unexpected subdirectories
       on Windows systems.
     - Banned the slash character (`/`) in tag names. They're still allowed
       in change names to enable script organization, but can wreak havoc
       when used in tag names. Thanks to @ewie for the report (#680)!

1.3.0  2022-08-12T22:09:13Z
     - Fixed an issue when testing Firebird on a host with Firebird installed
       but no `isql`, and when using a local Firebird (e.g., the Engine12
       provider), which allows only one connection at a time. Thanks to Slaven
       Rezić for the the reproducible configuration (#597).
     - Tweaked the Postgres engine to support Yugabyte. The only unsupported
       features are explicit locks, so users need to manually ensure that only