@@ -203,6 +203,9 @@ sub _copy {
         return;
     }
 
+    # Create the directory for the file, if it does not exist.
+    $self->_mkpath($dest->dir->stringify);
+
     # Stringify to work around bug in File::Copy warning on 5.10.0.
     File::Copy::syscopy "$src", "$dest" or hurl rework => __x(
         'Cannot copy {src} to {dest}: {error}',
