@@ -3,6 +3,8 @@ Revision history for Perl extension App::Sqitch
 1.3.2
      - Fixed Snowflake warehouse and role setup to properly quote identifiers.
        Thanks to @marc-marketparts for the report (#685)!
+     - Fixed a bug reworking a change when a rework directory is configured
+       but not created. Thanks to @jfeaver for the report (#686)!
 
 1.3.1  2022-10-01T18:49:30Z
      - Fixed a bug introduced in v1.3.0 where the Postgres engine would
